--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -120,15 +120,15 @@ h2 {
 }
 
 .header {
-    background-image: url(../img/sec1.jpg);   
-    min-height: 100vh; 
+    background-image: url(../img/main-bg.jpg);
+    min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;    
+    background-position: bottom;
     .dflex;
     .jcenter;
 
-    .header-top {       
+    .header-top {
         .block {
             .dflex;
             justify-content: space-around;
@@ -217,9 +217,9 @@ h2 {
         }
     }
 
-    .header-info {   
-        margin-top: 228px;     
-        text-align: center;                      
+    .header-info {
+        margin-top: 228px;
+        text-align: center;
 
         h1 {
             font-family: 'Bebas Neue', sans-serif;
@@ -278,15 +278,15 @@ h2 {
 }
 
 .about {
-    min-height: 100vh;  
-    padding: 18=rem 0 14rem;         
-    background-image: url(../img/sec2.jpg);    
+    min-height: 100vh;
+    padding: 18rem 0 14rem;
+    background-image: url(../img/about-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 
     .about-inner {
-        .dflex;               
+        .dflex;
 
         .about-info {
             padding-left: 120px;
@@ -357,31 +357,379 @@ h2 {
 }
 
 .features {
-    background-image: url(../img/sec3.jpg);
     min-height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;    
-}
-
-.config {
-    background-image: url(../img/sec4.jpg);
-    min-height: 100vh;
+    padding: 170px 0 200px;
+    background-image: url(../img/features-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+
+    .container {
+        .dflex;
+        .jend;
+
+        .features-inner {
+            padding-right: 120px;
+
+            .features-title {
+                font-family: 'Bebas Neue', sans-serif;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 24px;
+                letter-spacing: 2px;
+                color: #FFFFFF;
+                margin-bottom: 15px;
+            }
+
+            .features-subtitle {
+                font-family: 'Bebas Neue', sans-serif;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 80px;
+                line-height: 80px;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                color: #FFFFFF;
+            }
+
+            .features-tabs {
+                min-width: 368px;
+                margin: 70px 0 0;
+
+                .features-tab {
+                    margin-bottom: 40px;
+
+                    .features-tab_title {
+                        font-family: 'Bebas Neue', sans-serif;
+                        font-weight: 400;
+                        font-size: 36px;
+                        line-height: 36px;
+                        letter-spacing: 2px;
+                        color: #FFB548;
+                        padding: 0 0 18px 45px;
+                    }
+
+                    .features-tab_descr {
+                        padding-left: 45px;
+                        display: none;
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 22px;
+                        text-align: justify;
+                        color: #FFFFFF;
+                    }
+                }
+            }
+        }
+    }
+
+
+}
+
+.config {
+    background-image: url(../img/config-bg.jpg);
+    min-height: 100vh;
+    padding: 145px 0 170px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    .config-title {
+        font-family: 'Bebas Neue', sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 24px;
+        letter-spacing: 2px;
+        color: #FFFFFF;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .config-subtitle {
+        font-family: 'Bebas Neue', sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 80px;
+        line-height: 80px;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        text-align: center;
+        margin-bottom: 200px;
+    }
+
+    .config-inner {
+        padding: 0 120px;
+
+        .grid-container {
+            max-width: 574px;
+            border: 1px solid rgba(151, 151, 151, 0.3);
+            display: grid;
+            grid-template-columns: minmax(14rem, 27.6rem) minmax(14rem, 29.6rem);
+
+            .config-block {
+                padding: 15px 12px 30px 18px;
+                border: 1px solid rgba(151, 151, 151, 0.3);
+
+                &:last-child {
+                    grid-column: span 2;
+                    grid-row: span 2;
+                }
+
+                .config-block_title {
+                    font-family: 'Bebas Neue', sans-serif;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 24px;
+                    line-height: 24px;
+                    letter-spacing: 2px;
+                    color: #FFB548;
+                }
+
+                .config-block_descr {
+                    font-size: 18px;
+                    line-height: 22px;
+                    color: #FFFFFF;
+                }
+            }
+        }
+    }
 }
 
 .quotes {
+    min-height: 100vh;
+    padding: 16rem 0 14rem;
+    background-image: url(../img/quotes-bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 
+    .quotes-items {
+        .dflex;
+        .vcenter;
+        padding: 0 120px;
+
+        .quotes-item {
+            flex-basis: 50%;
+
+            .quotes-title {
+                font-family: 'Bebas Neue', sans-serif;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 24px;
+                letter-spacing: 2px;
+                color: #FFFFFF;
+                padding-bottom: 20px;
+            }
+
+            .quotes-subtitle {
+                font-family: 'Bebas Neue', sans-serif;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 80px;
+                line-height: 80px;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                color: #FFFFFF;
+                padding-bottom: 50px;
+            }
+
+            .quotes-text {
+                max-width: 435px;
+                font-size: 18px;
+                line-height: 22px;
+                color: #FFFFFF;
+                padding-bottom: 50px;
+            }
+
+            a {
+                display: block;
+                width: 260px;
+                padding: 18px 34px 16px;
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 22px;
+                text-align: center;
+                color: #1A1917;
+                background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%);
+                border-radius: 4px;
+            }
+
+            .quotes-user {
+                padding: 15px 20px 21px 17px;
+                background: rgba(255, 255, 255, 0.08);
+                border-radius: 10px;
+                position: relative;
+                max-width: 454px;
+                margin-bottom: 30px;
+                margin-left: auto;
+                position: relative; 
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    background-image: url(../img/twitter.svg);
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    width: 22px;
+                    height: 18px;
+                    opacity: 0.3;
+                    top: 25px;
+                    right: 18px;
+                }
+
+                &:nth-of-type(2) {
+                    margin-left: 50px;
+                }
+
+                &:last-of-type {
+                    margin-right: 20px;
+                }
+
+                .quotes-user_box {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 15px;
+
+
+                    .quotes-user_avatar {
+                        width: 70px;
+                        height: 70px;
+                        margin-right: 32px;                        
+                        display: flex;
+                        align-items: center;
+
+                        img {
+                            max-width: 63px;
+                            max-height: 63px;
+                            border-radius: 50%;
+                        }
+                    }
+
+                    .quotes-user_name {
+                        font-family: 'Bebas Neue', sans-serif;
+                        font-style: normal;
+                        font-weight: bold;
+                        font-size: 24px;
+                        line-height: 24px;
+                        letter-spacing: 2px;
+                        color: #FFB548;
+                        margin-bottom: 5px;
+                    }
+
+                    .quotes-user_status {
+                        font-size: 18px;
+                        line-height: 22px;
+                        text-align: justify;
+                        color: #FFFFFF;
+                        opacity: 0.5;
+                    }
+                }
+
+                .quotes-user_feedback {
+                    .quotes-user_text {
+                        font-size: 18px;
+                        line-height: 25px;
+                        color: #FFFFFF;
+                        margin-bottom: 15px;
+                    }
+
+                    time {
+                        font-size: 14px;
+                        line-height: 19px;
+                        color: #FFFFFF;
+                        mix-blend-mode: normal;
+                        opacity: 0.5;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .subscribe {
-    
+    background-color: #080A0B;
+    padding-top: 100px;
+
+    .subscribe-inner {
+        display: flex;
+        align-items: center;
+        padding: 0 100px;
+
+        .subscribe-bg {
+            width: 100%;
+            margin-right: 70px;
+            margin-left: 30px;
+        }
+
+        .subscribe-block {
+            .subscribe-title {
+                font-family: 'Bebas Neue', sans-serif;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 24px;
+                letter-spacing: 2px;
+                color: #FFFFFF;
+                margin-bottom: 20px;
+            }
+
+            .subscribe-subtitle {
+                font-family: 'Bebas Neue', sans-serif;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 80px;
+                line-height: 80px;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                color: #FFFFFF;
+                margin-bottom: 45px;
+            }
+
+            .subscribe-text {
+                font-size: 18px;
+                line-height: 22px;
+                color: #FFFFFF;
+                margin-bottom: 55px;
+            }
+
+            form {
+                .dflex;
+
+                input {
+                    padding: 18px 21px 18px;
+                    background: rgba(255, 255, 255, 0.08);
+                    border-radius: 5px;
+                    margin-right: 18px;
+                    height: 60px;
+                    width: 365px;
+                    font-size: 18px;
+                    line-height: 25px;
+                    color: #FFB548;
+                    border: none;
+                }
+
+                button {
+                    height: 59px;
+                    width: 260px;
+                    padding: 18px 16px;
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 22px;
+                    text-align: center;
+                    color: #1A1917;
+                    background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%);
+                    border-radius: 4px;
+                }
+            }
+        }
+    }
 }
 
 .footer {
-    background-color: #000;
+    background-color: #080A0B;
     height: 233px;
 
     .footer-top {
