--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -964,6 +964,11 @@ h2 {
   font-size: 12px;
   line-height: 16px;
   text-transform: uppercase;
+  transition: .3s all ease;
+}
+.header .header-top .block .block-nav li a:hover {
+  color: #F3AF34;
+  text-decoration: underline;
 }
 .header .header-top .block .block-option {
   display: -webkit-box;
@@ -1044,6 +1049,13 @@ h2 {
   color: #1A1917;
   background: linear-gradient(194.68deg,#FFB548 11.27%,#F3AF34 90.4%);
   border-radius: 4px;
+  transition: 0.1 all linear;
+}
+.header .header-info button:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  background: #ffa015;
 }
 .header .header-info button span {
   padding-left: 10px;
@@ -1064,6 +1076,16 @@ h2 {
   text-transform: uppercase;
   color: #fff;
   background-color: transparent;
+  transition: .3s all ease;
+}
+.header .header-info a:hover {
+  color: #ff4d4d;
+}
+.header .header-info a svg {
+  fill: transparent;
+}
+.header .header-info a svg:hover {
+  fill: #ff4d4d;
 }
 .about {
   min-height: 100vh;
@@ -1306,7 +1328,7 @@ h2 {
   padding-bottom: 50px;
 }
 .quotes .quotes-items .quotes-item a {
-  display: block;
+  display: inline-block;
   width: 260px;
   padding: 18px 34px 16px;
   font-weight: 700;
@@ -1316,6 +1338,33 @@ h2 {
   color: #1A1917;
   background: linear-gradient(194.68deg,#FFB548 11.27%,#F3AF34 90.4%);
   border-radius: 4px;
+  text-transform: capitalize;
+  overflow: hidden;
+  position: relative;
+  transition: all 0.2s linear 0s;
+}
+.quotes .quotes-items .quotes-item a:before {
+  content: "\f0a4";
+  font-family: 'Icomoon', sans-serif;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: -30px;
+  width: 30px;
+  height: 100%;
+  border-radius: 0px 4px 4px 0px;
+  text-align: center;
+  transition: .3s all ease;
+}
+.quotes .quotes-items .quotes-item a:hover {
+  text-indent: -30px;
+}
+.quotes .quotes-items .quotes-item a:hover:before {
+  right: 0;
+  text-indent: 0px;
 }
 .quotes .quotes-items .quotes-item .quotes-user {
   padding: 15px 20px 21px 17px;
@@ -1325,6 +1374,7 @@ h2 {
   max-width: 454px;
   margin-bottom: 30px;
   margin-left: auto;
+  transition: .3s all ease;
 }
 .quotes .quotes-items .quotes-item .quotes-user::after {
   content: '';
@@ -1343,6 +1393,11 @@ h2 {
 }
 .quotes .quotes-items .quotes-item .quotes-user:last-of-type {
   margin-right: 20px;
+}
+.quotes .quotes-items .quotes-item .quotes-user:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .quotes .quotes-items .quotes-item .quotes-user .quotes-user_box {
   display: flex;
@@ -1460,13 +1515,38 @@ h2 {
   color: #1A1917;
   background: linear-gradient(194.68deg,#FFB548 11.27%,#F3AF34 90.4%);
   border-radius: 4px;
+  position: relative;
+  transition: .3s all ease;
+}
+.subscribe .subscribe-inner .subscribe-block form button:before {
+  content: "\f0a2";
+  font-family: 'Icomoon', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 30px;
+  transform: scale(0,1);
+  transition: all 0.2s linear 0s;
+}
+.subscribe .subscribe-inner .subscribe-block form button:hover {
+  text-indent: -9999px;
+}
+.subscribe .subscribe-inner .subscribe-block form button:hover:before {
+  transform: scale(1,1);
+  text-indent: 0;
 }
 .footer {
   background-color: #080A0B;
   height: 233px;
 }
 .footer .footer-top {
-  padding: 15px 120px 0;
+  padding: 0 120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1484,7 +1564,7 @@ h2 {
   width: 90px;
   height: 90px;
 }
-.footer .footer-top ul {
+.footer .footer-top .menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1497,31 +1577,50 @@ h2 {
   line-height: 16px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
+  cursor: pointer;
+  transition: .3s all ease;
 }
-.footer .footer-top ul li a {
-  padding-left: 40px;
+.footer .footer-top .menu li a {
+  color: #fff;
+  display: inline-block;
+  transition: 2s;
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+.footer .footer-top .menu li a:hover {
+  transition: 0.3s;
+  top: -8px;
+  left: 8px;
+  color: #F3AF34;
+}
+.footer .footer-top .menu li.space {
+  width: 20px;
+  height: 100%;
+}
+.footer .footer-top .menu li+li {
+  margin-left: 50px;
 }
 .footer .footer-top .socials ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding-top: 40px;
 }
-.footer .footer-top .socials ul li .facebook {
-  width: 9px;
-  height: 19px;
+.footer .footer-top .socials ul li svg path {
+  fill: #fff;
+  min-height: 19px;
+  min-width: 9px;
+  transition: .3s all ease;
 }
-.footer .footer-top .socials ul li .twitter {
-  width: 21px;
-  height: 16px;
-}
-.footer .footer-top .socials ul li .youtube {
-  width: 25px;
-  height: 18px;
-}
-.footer .footer-top .socials ul li .twitch {
-  width: 19px;
-  height: 18px;
+.footer .footer-top .socials ul li svg path:hover {
+  fill: red;
 }
 .footer .footer-top .socials ul li+li {
-  padding-left: 56px;
+  padding-left: 45px;
 }
 .footer .footer-bot {
   padding-top: 49px;
@@ -1567,6 +1666,11 @@ h2 {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: #FFF;
+  transition: .3s all ease;
+}
+.footer .footer-bot ul li a:hover {
+  color: #ff4d4d;
+  text-decoration: underline;
 }
 .footer .footer-bot ul li+li {
   padding-left: 16px;
