--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -27,3 +27,34 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'Icomoon';    
+    src:  url('icomoon.ttf') format('truetype'),
+      url('icomoon.woff') format('woff');      
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-bell-o:before {
+    content: "\f0a2";
+  }
+  .icon-hand-o-right:before {
+    content: "\f0a4";
+  }
