--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -420,10 +420,28 @@ h2 {
 
             .features-tabs {
                 min-width: 368px;
-                margin: 70px 0 0;
+                margin: 70px 0 0;               
+
+                .features-tab_active .features-tab_descr{
+                    display: block;
+                    background: transparent;
+                }
 
                 .features-tab {
-                    margin-bottom: 40px;
+                    padding-bottom: 30px;
+                    position: relative;
+                    cursor: pointer;
+
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 14px;
+                        height: 14px;
+                        border: 1px solid #fff;
+                        border-radius: 50%;
+                        left: 0;
+                        top: 7px;
+                    }                                          
 
                     .features-tab_title {
                         font-family: 'Bebas Neue', sans-serif;
@@ -433,6 +451,10 @@ h2 {
                         letter-spacing: 2px;
                         color: #FFB548;
                         padding: 0 0 18px 45px;
+
+                        &:hover {
+                            color: whitesmoke;
+                        }
                     }
 
                     .features-tab_descr {
@@ -443,13 +465,14 @@ h2 {
                         line-height: 22px;
                         text-align: justify;
                         color: #FFFFFF;
+                        max-width: 405px;
                     }
                 }
+
+                
             }
         }
     }
-
-
 }
 
 .config {
