--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1196,8 +1196,24 @@ h2 {
   min-width: 368px;
   margin: 70px 0 0;
 }
+.features .container .features-inner .features-tabs .features-tab_active .features-tab_descr {
+  display: block;
+  background: transparent;
+}
 .features .container .features-inner .features-tabs .features-tab {
-  margin-bottom: 40px;
+  padding-bottom: 30px;
+  position: relative;
+  cursor: pointer;
+}
+.features .container .features-inner .features-tabs .features-tab::before {
+  content: '';
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  left: 0;
+  top: 7px;
 }
 .features .container .features-inner .features-tabs .features-tab .features-tab_title {
   font-family: 'Bebas Neue', sans-serif;
@@ -1208,6 +1224,9 @@ h2 {
   color: #FFB548;
   padding: 0 0 18px 45px;
 }
+.features .container .features-inner .features-tabs .features-tab .features-tab_title:hover {
+  color: whitesmoke;
+}
 .features .container .features-inner .features-tabs .features-tab .features-tab_descr {
   padding-left: 45px;
   display: none;
@@ -1216,6 +1235,7 @@ h2 {
   line-height: 22px;
   text-align: justify;
   color: #FFFFFF;
+  max-width: 405px;
 }
 .config {
   background-image: url(../img/config-bg.jpg);
